--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    
+    implementation 'com.karumi:dexter:5.0.0'
+    implementation 'com.chootdev:csnackbar:1.4.2'
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
     implementation 'com.android.support:support-v4:28.0.0-alpha1'
     implementation 'com.android.support:design:28.0.0-alpha1'
